fixed cards overflowing

--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -1,21 +1,46 @@
 #links {
     background-color: transparent;
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
-    display: flex;
+
+    height: calc(100vh - 40px);
+    width: calc(100vw - 40px);
+    padding: 20px;
+    position: absolute;
     top: 0;
     left: 0;
+
     opacity: 0;
     visibility: hidden;
     transition: all 1000ms ease;
     z-index: 4;
-    pointer-events: none;
+
+    display: flex;
+    flex: 1;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: center;
+    justify-content: center;
+    align-items: center;
+
     gap: 50px;
+
+    pointer-events: none;
     overflow: auto;
+}
+
+@media (min-width: 800px) {
+    #links {
+        align-content: center;
+        padding: 100px;
+        height: calc(100vh - 200px);
+        width: calc(100vw - 200px);
+    }
+}
+
+@media (min-width: 1200px) {
+    #links {
+        align-content: center;
+        padding: 300px;
+        height: calc(100vh - 600px);
+        width: calc(100vw - 600px);
+    }
 }
 
 body.toggled #links {
@@ -26,18 +51,21 @@ body.toggled #links {
 
 .card {
     width: 220px;
-    height: 100px;
+    height: 120px;
     border-radius: 5px;
-    background: transparent;
-    position: relative;
     padding: 1.8rem;
+    position: relative;
+
+    background: transparent;
     border: 2px solid var(--g3);
+    font-family: "Raleway", sans-serif;
     transition: all 0.8s ease-out;
+
     cursor: pointer;
     pointer-events: all;
-    font-family: "Raleway", sans-serif;
     user-select: none;
 }
+
 
 body.toggled>.card {
     opacity: 1;
@@ -71,11 +99,11 @@ body.toggled>.card {
     font-family: "Raleway", sans-serif;
 }
 
+/*Text*/
 .text-body {
     color: var(--g3);
 }
 
-/*Text*/
 .text-title {
     font-size: 1.5em;
     font-weight: bold;
